<?xml version="1.0"?>
<package format="2">
  <name>perception_models</name>
  <version>0.0.0</version>
  <description>The package which contains trained perception models used by b-it-bots</description>

  <maintainer email="robotics@mail.inf.h-brs.de">MAS Robotics</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
